--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@
 ## JBIJPPTPL
 
 name: Build
-on: [push, pull_request]
+on: workflow_dispatch
 jobs:
 
   # Run Gradle Wrapper Validation Action to verify the wrapper's checksum
