--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,11 @@ jobs:
 
       # Check out current repository
       - name: Fetch Sources
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       # Validate wrapper
       - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.3
+        uses: gradle/wrapper-validation-action@v4
 
   # # Run verifyPlugin and test Gradle tasks
   # test:
@@ -85,24 +85,24 @@ jobs:
 
       # Setup Java 1.8 environment for the next steps
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 1.8
 
       # Check out current repository
       - name: Fetch Sources
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Cache Gradle Dependencies
       - name: Setup Gradle Dependencies Cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', 'gradle.properties') }}
 
       # Cache Gradle Wrapper
       - name: Setup Gradle Wrapper Cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
@@ -132,115 +132,115 @@ jobs:
 
       # Upload plugin artifact to make it available in the next jobs
       - name: Upload artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: plugin-artifact
           path: ./build/distributions/${{ steps.properties.outputs.artifact }}
 
-  # Verify built plugin using IntelliJ Plugin Verifier tool
-  # Requires build job to be passed
-  verify:
-    name: Verify
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+  # # Verify built plugin using IntelliJ Plugin Verifier tool
+  # # Requires build job to be passed
+  # verify:
+  #   name: Verify
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
 
-      # Setup Java 1.8 environment for the next steps
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+  #     # Setup Java 1.8 environment for the next steps
+  #     - name: Setup Java
+  #       uses: actions/setup-java@v1
+  #       with:
+  #         java-version: 1.8
 
-      # Check out current repository
-      - name: Fetch Sources
-        uses: actions/checkout@v3
+  #     # Check out current repository
+  #     - name: Fetch Sources
+  #       uses: actions/checkout@v3
 
-      # Cache Gradle Dependencies
-      - name: Setup Gradle Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', 'gradle.properties') }}
+  #     # Cache Gradle Dependencies
+  #     - name: Setup Gradle Dependencies Cache
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.gradle/caches
+  #         key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', 'gradle.properties') }}
 
-      # Cache Gradle Wrapper
-      - name: Setup Gradle Wrapper Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+  #     # Cache Gradle Wrapper
+  #     - name: Setup Gradle Wrapper Cache
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.gradle/wrapper
+  #         key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
 
-      # Set environment variables
-      - name: Export Properties
-        id: properties
-        shell: bash
-        run: |
-          PROPERTIES="$(./gradlew properties --console=plain -q)"
-          IDE_VERSIONS="$(echo "$PROPERTIES" | grep "^pluginVerifierIdeVersions:" | base64)"
+  #     # Set environment variables
+  #     - name: Export Properties
+  #       id: properties
+  #       shell: bash
+  #       run: |
+  #         PROPERTIES="$(./gradlew properties --console=plain -q)"
+  #         IDE_VERSIONS="$(echo "$PROPERTIES" | grep "^pluginVerifierIdeVersions:" | base64)"
 
-          echo "::set-output name=ideVersions::$IDE_VERSIONS"
-          echo "::set-output name=pluginVerifierHomeDir::~/.pluginVerifier"
+  #         echo "::set-output name=ideVersions::$IDE_VERSIONS"
+  #         echo "::set-output name=pluginVerifierHomeDir::~/.pluginVerifier"
 
-      # Cache Plugin Verifier IDEs
-      - name: Setup Plugin Verifier IDEs Cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.properties.outputs.pluginVerifierHomeDir }}/ides
-          key: ${{ runner.os }}-plugin-verifier-${{ steps.properties.outputs.ideVersions }}
+  #     # Cache Plugin Verifier IDEs
+  #     - name: Setup Plugin Verifier IDEs Cache
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ${{ steps.properties.outputs.pluginVerifierHomeDir }}/ides
+  #         key: ${{ runner.os }}-plugin-verifier-${{ steps.properties.outputs.ideVersions }}
 
-      # Run IntelliJ Plugin Verifier action using GitHub Action
-      - name: Verify Plugin
-        run: ./gradlew runPluginVerifier -Pplugin.verifier.home.dir=${{ steps.properties.outputs.pluginVerifierHomeDir }}
+  #     # Run IntelliJ Plugin Verifier action using GitHub Action
+  #     - name: Verify Plugin
+  #       run: ./gradlew runPluginVerifier -Pplugin.verifier.home.dir=${{ steps.properties.outputs.pluginVerifierHomeDir }}
 
-  # Prepare a draft release for GitHub Releases page for the manual verification
-  # If accepted and published, release workflow would be triggered
-  releaseDraft:
-    name: Release Draft
-    if: github.event_name != 'pull_request'
-    needs: [build, verify]
-    runs-on: ubuntu-latest
-    steps:
+  # # Prepare a draft release for GitHub Releases page for the manual verification
+  # # If accepted and published, release workflow would be triggered
+  # releaseDraft:
+  #   name: Release Draft
+  #   if: github.event_name != 'pull_request'
+  #   needs: [build, verify]
+  #   runs-on: ubuntu-latest
+  #   steps:
 
-      # Check out current repository
-      - name: Fetch Sources
-        uses: actions/checkout@v3
+  #     # Check out current repository
+  #     - name: Fetch Sources
+  #       uses: actions/checkout@v3
 
-      # Remove old release drafts by using the curl request for the available releases with draft flag
-      - name: Remove Old Release Drafts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl -H "Authorization: Bearer $GITHUB_TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/releases \
-            | tr '\r\n' ' ' \
-            | jq '.[] | select(.draft == true) | .id' \
-            | xargs -I '{}' \
-          curl -X DELETE -H "Authorization: Bearer $GITHUB_TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/releases/{}
+  #     # Remove old release drafts by using the curl request for the available releases with draft flag
+  #     - name: Remove Old Release Drafts
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       run: |
+  #         curl -H "Authorization: Bearer $GITHUB_TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/releases \
+  #           | tr '\r\n' ' ' \
+  #           | jq '.[] | select(.draft == true) | .id' \
+  #           | xargs -I '{}' \
+  #         curl -X DELETE -H "Authorization: Bearer $GITHUB_TOKEN" https://api.github.com/repos/$GITHUB_REPOSITORY/releases/{}
 
-      # Create new release draft - which is not publicly visible and requires manual acceptance
-      - name: Create Release Draft
-        id: createDraft
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ needs.build.outputs.version }}
-          release_name: v${{ needs.build.outputs.version }}
-          body: ${{ needs.build.outputs.changelog }}
-          draft: true
+  #     # Create new release draft - which is not publicly visible and requires manual acceptance
+  #     - name: Create Release Draft
+  #       id: createDraft
+  #       uses: actions/create-release@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         tag_name: v${{ needs.build.outputs.version }}
+  #         release_name: v${{ needs.build.outputs.version }}
+  #         body: ${{ needs.build.outputs.changelog }}
+  #         draft: true
 
-      # Download plugin artifact provided by the previous job
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: plugin-artifact
+  #     # Download plugin artifact provided by the previous job
+  #     - name: Download Artifact
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: plugin-artifact
 
-      # Upload artifact as a release asset
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.createDraft.outputs.upload_url }}
-          asset_path: ./${{ needs.build.outputs.artifact }}
-          asset_name: ${{ needs.build.outputs.artifact }}
-          asset_content_type: application/zip
+  #     # Upload artifact as a release asset
+  #     - name: Upload Release Asset
+  #       id: upload-release-asset
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ steps.createDraft.outputs.upload_url }}
+  #         asset_path: ./${{ needs.build.outputs.artifact }}
+  #         asset_name: ${{ needs.build.outputs.artifact }}
+  #         asset_content_type: application/zip
